# break-enforcer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  break-enforcer.service  codebook.toml  flake.nix  nix_module.nix  rust-toolchain.toml  setup_toolchain.sh
.cargo/: config.toml
.github/workflows/: release.yml
buffering/: Cargo.toml
buffering/src/: decoder.rs  irq_test.rs  lib.rs  reader.rs
encode_derive/: Cargo.toml
encode_derive/src/: diff.rs  lib.rs  nrzi.rs
enforcer/src/: main.rs  monitor.rs
examples/: print-idle.rs  print-state-switches.rs  print_status.rs
spy/: Cargo.toml  build.rs  custom_link.x  memory.x  openocd.cfg
spy/.cargo/: config.toml
spy/src/: debug_pulse.rs  decoder.rs  main.rs  packet.rs  read_packets.rs
src/: check_inputs.rs  cli.rs  config.rs  control.rs  find_devices.rs  install.rs  integration.rs  isr.s  lib.rs  lock.rs  main.rs  manage.rs  monitor.rs  run.rs  setup.rs  status.rs  tcp_api_config.rs  test_interrupt.rs  watch.rs  watch_and_block.rs  wizard.rs
src/cli/: duration_parser.rs
src/integration/: dbus.rs  file_status.rs  notification.rs  tcp_api.rs
usb_decode/: Cargo.toml
usb_decode/src/: adress.rs  crc.rs  data.rs  header.rs  lib.rs
usb_decode/tests/: input.rs  input.txt  spy.rs
