[package]
name = "break-enforcer"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
evdev = { version = "0.12" }
inotify = "0.10"
itertools = "0.13"
ron = "0.8.1"
serde = { version = "1", features = ["derive"] }
sudo = "0.6"
thiserror = "1"

service-install = { version = "0.4.4" }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.37", features = ["rt", "time", "macros"] }
