[package]
name = "break-spy"
version = "0.1.0"
edition = "2021"

[dependencies] 
# stm32f4 = { version = "0.15", features = ["stm32f401"] }
embedded-hal = "0.2"
nb = "1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
fugit = "0.3.6"

[dependencies.stm32f4xx-hal]
version = "0.16.0"
features = ["stm32f401", "defmt"] # replace the model of your microcontroller here
                         # and add other required features

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = 2
